src/tests/fixtures/errors/unclosed-block.hbs
<div class="card">{{#if open}}<p>content</p></div>